mariadb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Endpoints
metadata:
  # the name here should match the name of the Service
  name: mariadb-service
subsets:
  - addresses:
      - ip: 192.168.1.2
    ports:
      - port: 3306
